--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     Teu aniversário não é só uma data no calendário.  
     É o lembrete de que o amor existe.  
     De que o tempo tem sentido quando vivido contigo.  
-    E que tudo — tudo mesmo — vale a pena, se for ao teu lado.  
+    E que tudo, tudo mesmo, vale a pena se for ao teu lado.  
     <br><br>
     Obrigada por existir. <br>
     Obrigada por pulsar. <br>
@@ -107,3 +107,4 @@
   </script>
 </body>
 </html>
+
